--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
             <button class="filter-btn" data-filter="starters">Starters</button>
             <button class="filter-btn" data-filter="mains">Main Course</button>
             <button class="filter-btn" data-filter="desserts">Desserts</button>
-            <button class="filter-btn" data-filter="beverages">
-              Beverages
-            </button>
+            <button class="filter-btn" data-filter="beverages">Beverages</button>
           </div>
 
           <div class="menu-container" id="menu-items-container">
